# neoton

./: .dockerignore  .gitignore  ARCH.md  CMakeLists.txt  Cargo.toml  Dockerfile  Makefile  README.md  TODO.md  V01.md  build.rs  conanfile.txt  dev-run.sh  diesel.toml  drizzle.config.ts  dump.rdb  file-structure.md  history.txt  neolink.db  opendb  package-lock.json  package.json  pnpm-lock.yaml  private_key.pem  public_key.pem  tsconfig.json
.sqlx/: query-03fe2fb7f39476f519fbcb546106ddf5039192caf84e9f9e23adadf6cd6a7ccc.json  query-f3f58600e971f1be6cbe206bba24f77769f54c6230e28f5b3dc719b869d9cb3f.json  query-fb3461118de2e7ab02cd24bffbea312cf4574faeb9c651ba6b34e61a8e910649.json
migrations/: 20250412184619_chat-setup.down.sql  20250412184619_chat-setup.up.sql  20250422143033_unique-contact-relation.down.sql  20250422143033_unique-contact-relation.up.sql
migrations/2025-04-09-061246_setup-one-to-one-chats/: down.sql  up.sql
migrations/2025-04-10-212435_setup-relations-messages-user-contacts/: down.sql  up.sql
migrations/2025-04-11-064043_contacts-relations/: down.sql  up.sql
migrations/2025-04-12-052231_rename-user-contact-relation-table/: down.sql  up.sql
mobile/: pubspec.yaml
src/: auth_controller.cc  consts.js  db.cc  db.h  db.js  email-transport.js  image.cc  image.h  jwt.rs  lib.rs  logger.js  main.cc  main.rs  middlewares.js  models.rs  otp.js  otp.rs  schema.rs  schema_auth.cc  schema_auth.h  server.cc  server.h  server.js  session.js  sql.rs  sql_commands.cpp  sql_commands.h  tests.rs  utils.h  utils.js  utils.rs
src/auth/: jwt.h  otp.h  users.cc  users.h
src/chats/: chat.h  message.h
src/controllers/: auth_controllers.cc  auth_controllers.h  user_controllers.cc  user_controllers.h
src/db/: mutations.rs  queries.rs  schema.js  setup.cc  setup.h  sql_commands.h
src/handlers/: calls.rs  messaging.rs  mod.rs  realtime.rs
src/handlers/auth/: email.js  login.js  register.js  verify.js
src/handlers/db/: users.js
src/middlewares/: auth.rs
src/routes/: email.rs  mod.rs
src/routes/auth/: login.rs  logout.rs  mod.rs  register.rs  verify.rs
src/routes/user/: info.rs
src/schema/: auth.cc  auth.h
src/utils/: utils.cc
web/: Makefile  TODO.md  capacitor.config.ts  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/android/app/: build.gradle
web/android/app/src/main/java/dev/neolink/app/: MainActivity.java
web/android/app/src/main/java/io/neolink/app/: MainActivity.java
web/android/app/src/main/res/values/: strings.xml
web/src/: App.jsx  Home.jsx  Layout.jsx  calls.ts  contexts.js  contexts.ts  customSignals.ts  fonts.css  index.css  index.jsx  index.tsx  requests.js  requests.ts  schema.ts  socket.ts  types.d.ts  utils.js  utils.ts
web/src/components/: About.jsx  AuthLayout.jsx  Calls.tsx  ChangeThemeBtn.jsx  ChatsLayout.jsx  ChatsLayout.tsx  CustomToasts.jsx  CustomToasts.tsx  Form.jsx  Header.jsx  Header.tsx  HomeLayout.jsx  HomeLayout.tsx  InviteUser.jsx  InviteUser.tsx  Layout.jsx  ListenersWrapper.jsx  ListenersWrapper.tsx  LogInPage.jsx  NavLinks.jsx  SignUpPage.jsx  ThemeChanger.jsx  WebRTC.jsx  WebRTC.tsx  WebRTCTest.tsx  types.d.ts
web/src/pages/: 404.jsx  404.tsx  Calls.jsx  Calls.tsx  Chats.jsx  Chats.tsx  Contacts.jsx  Contacts.tsx  Home.jsx  Home.tsx  Login.jsx  Login.tsx  Messaging.jsx  Messaging.tsx  Register.jsx  Register.tsx  Settings.tsx  TestPage.tsx  Verify.jsx  Verify.tsx
web/src/utils/: route.js
web/tests/: example.spec.ts  requests.spec.ts
