[package]
name = "neolink"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.3", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-signed", "cookie", "cookie-private", "multipart", "attachment", "async-read-body"] }
bcrypt = { version = "0.17.0", features = ["std"] }
chrono = { version = "0.4.40", features = ["serde", "clock"] }
diesel = { version = "2.2.9", features = ["chrono", "postgres", "r2d2"] }
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["tracing", "tokio1", "tokio1-native-tls"] }
password-hash = "0.5.0"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = "0.16.2"
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace", "compression-gzip", "redirect", "cors", "async-compression", "full", "mime", "mime_guess"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "chrono", "serde", "serde_json", "time", "env-filter"] }

