[package]
name = "neoton"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.3", features = ["multipart", "ws", "macros"] }
axum-extra = { version = "0.10.1", features = ["cookie-signed", "cookie", "cookie-private", "multipart", "attachment", "async-read-body"] }
bcrypt = { version = "0.17.0", features = ["std"] }
chrono = { version = "0.4.40", features = ["serde", "clock"] }
clap = { version = "4.5.36", features = ["derive"] }
cookie = "0.18.1"
dotenvy = "0.15.7"
jsonwebtoken = "9.3.1"
lettre = { version = "0.11.15", features = ["tracing", "tokio1", "tokio1-native-tls"] }
password-hash = "0.5.0"
rand = "0.9.0"
redis = { version = "0.29.5", features = ["tokio-comp", "json"] }
rmpv = { version = "1.3.0", features = ["with-serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
socketioxide = { version = "0.16.2", features = ["extensions", "state", "v4", "msgpack"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "tls-native-tls", "json", "chrono", "postgres", "regexp" ] }
time = { version = "0.3.41", features = ["serde"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "trace", "compression-gzip", "redirect", "cors", "async-compression", "full", "mime", "mime_guess"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "chrono", "serde", "serde_json", "time", "env-filter"] }
url = { version = "2.5.4", features = ["serde"] }

